--- a/src/teaeli/AdminPannel.form
+++ b/src/teaeli/AdminPannel.form
@@ -1618,7 +1618,7 @@
     <Component class="javax.swing.JLabel" name="logoLabel">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="D:\Developer\My Projects\TeaELI\TeaELI\img\logo-new (Custom).png"/>
+          <Image iconType="2" name=".\img\logo-new (Custom).png"/>
         </Property>
       </Properties>
     </Component>
