--- a/src/teaeli/LoginFrame.form
+++ b/src/teaeli/LoginFrame.form
@@ -126,7 +126,7 @@
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="D:\Developer\My Projects\TeaELI\TeaELI\img\login background.jpg"/>
+          <Image iconType="2" name=".\img\login background.jpg"/>
         </Property>
       </Properties>
       <Constraints>
