--- a/src/teaeli/ManagerPannel.form
+++ b/src/teaeli/ManagerPannel.form
@@ -622,7 +622,7 @@
     <Component class="javax.swing.JLabel" name="logoLabel">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/teaeli/logo-new (Custom).png"/>
+          <Image iconType="3" name="/img/logo-new (Custom).png"/>
         </Property>
       </Properties>
     </Component>
